# Citation_standadizer

./: .cursorrules  .gitignore  Marker_converter.py  Marker_converter_gemini.py  README.md  pyproject.toml
