[project]
name = "test-marker-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "termcolor",
    "pillow",
    "openai",
    "marker-pdf==1.3.4",
    "rich",
    "pydantic",
    "termcolor",
    "aiohttp",
    "rapidfuzz",
    "google-generativeai",

    # PDF processing
    "pdf2doi",
    "crossrefapi",
    "scholarly",
    "arxiv",
    "unidecode",
]
